# axono

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-build.sh  docker-feature.md  docker-run.sh  install.sh  pyproject.toml  requirements.txt  run.sh
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  release-drafter.yml
axono/: agent.py  coding.py  config.py  conversation.py  folderembed.py  history.py  intent.py  langdetect.py  main.py  onboarding.py  pipeline.py  prompt.py  safety.py  shell.py  ui.py  workspace.py
axono/prompts/coding/: generator.yml  iterative_planner.yml  planner.yml  validator.yml
axono/prompts/example/: someprompt.yml
notebook/: coding.ipynb
tests/: test_agent.py  test_coding.py  test_config.py  test_conversation.py  test_folderembed.py  test_history.py  test_intent.py  test_langdetect.py  test_main.py  test_onboarding.py  test_pipeline.py  test_prompt.py  test_safety.py  test_shell.py  test_ui.py  test_workspace.py
