[project]
name = "axono"
version = "0.1.0"
description = "Terminal-based AI assistant powered by a local LLM via LM Studio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Guido Docter" },
]
dependencies = [
    "textual",
    "langchain==1.2.8",
    "langchain-openai",
    "langchain-mcp-adapters",
    "python-dotenv",
]

[project.scripts]
axono = "axono.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
